[gd_scene load_steps=7 format=2]

[ext_resource path="res://black_bg.png" type="Texture" id=1]
[ext_resource path="res://text_box.png" type="Texture" id=2]
[ext_resource path="res://Alef-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://dialog_continue_arrow.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[node name="Game" type="Control"]
margin_right = 640.0
margin_bottom = 480.0
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 540, 360 )
scale = Vector2( 1.40625, 1.40625 )
texture = ExtResource( 1 )

[node name="DialogBox" type="Control" parent="."]
margin_left = 186.0
margin_top = 441.0
margin_right = 658.0
margin_bottom = 608.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 1.5, 1.5 )

[node name="DialogBoxBG" type="Sprite" parent="DialogBox"]
modulate = Color( 0.258824, 0.278431, 0.54902, 0.752941 )
self_modulate = Color( 0, 0.227451, 1, 1 )
position = Vector2( -14.6667, 24.6666 )
scale = Vector2( 0.857555, 0.993419 )
texture = ExtResource( 2 )
centered = false

[node name="DialogText" type="RichTextLabel" parent="DialogBox"]
margin_left = -2.0
margin_top = 33.0
margin_right = 468.0
margin_bottom = 150.0
custom_fonts/normal_font = SubResource( 1 )
scroll_active = false

[node name="DialogContinueArrow" type="Sprite" parent="DialogBox"]
position = Vector2( 457.333, 158 )
scale = Vector2( 0.113333, 0.166667 )
texture = ExtResource( 13 )

[node name="Debug" type="Control" parent="."]
visible = false
margin_left = 17.0
margin_top = 28.0
margin_right = 619.0
margin_bottom = 293.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugOutput" type="TextEdit" parent="Debug"]
margin_left = 37.0
margin_top = 12.0
margin_right = 566.0
margin_bottom = 129.0

[node name="SE01" type="AudioStreamPlayer" parent="."]

[node name="SE02" type="AudioStreamPlayer" parent="."]

[node name="SE03" type="AudioStreamPlayer" parent="."]

[node name="SE04" type="AudioStreamPlayer" parent="."]

[node name="SE05" type="AudioStreamPlayer" parent="."]

[node name="SE06" type="AudioStreamPlayer" parent="."]

[node name="SE07" type="AudioStreamPlayer" parent="."]

[node name="SE08" type="AudioStreamPlayer" parent="."]
